--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.2",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "swiper": "^10.2.0"
